@@ -1,5 +1,4 @@
 DIST swarp-0.1.tar.gz 2277 RMD160 6a1308a01ad633d290add947cc02bccc95644c25 SHA1 0d602b971f3d9fe0197143a9106a5c2e5044fd01 SHA256 ef5730fe8ee00879cbec1e91e22a7f0f7817a63375d790d775f5b7427886d45f
 EBUILD swarp-0.1.ebuild 802 RMD160 f865b64c54632588da5ba7d9003a6f056765c5b6 SHA1 0800d81b84449fda6c0e63c44cf1e7c1a704cbc5 SHA256 cf5f0878afb2b55328bf4c6084911eb49b64a4a96b86ca8d98f16547d39f2165
-EBUILD swarp-9999.ebuild 823 RMD160 9162f12645da17baa17a0851e7e58a089ba381be SHA1 d5ba0563341205c5c2bd9c74ce8a140e1ac3fa41 SHA256 11f485596129865e0696ad85ac188b157911602cf7e6cf6f8fdffdfd7e6e748a
-MISC ChangeLog 772 RMD160 1a5598f9621064f5b3ed95e9174f72c8632a8aea SHA1 30748a94ed8a9b26e3c9726185ee9ca20027f237 SHA256 ff8e9c3b82c7ec7b78007f3c8b419f10e8e37f4ea548a4c49d17c10c1b70501b
+MISC ChangeLog 995 RMD160 4b0bd6728f924a559996311ce01e762ee89fcd32 SHA1 dd8e15f76a358bf74cc07a0115e65f9cadebe76a SHA256 37cfdd83eb8030453de6f25889bad62f3ef977d874636a0c0a7ff3fd50a8dafd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
