@@ -1,44 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit mercurial toolchain-funcs
-
-DESCRIPTION="simple pointer warp"
-HOMEPAGE="http://tools.suckless.org/swarp"
-SRC_URI=""
-EHG_REPO_URI=http://suckless.org/cgi-bin/hgwebdir.cgi/${PN}
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND="x11-libs/libX11"
-RDEPEND="${DEPEND}"
-
-S=${WORKDIR}/${PN}
-
-src_unpack() {
-	mercurial_src_unpack
-	cd "${S}"
-
-	sed -i \
-		-e "s/.*strip.*//" \
-		Makefile || die "sed failed"
-
-	sed -i \
-		-e "s/CFLAGS = -Os/CFLAGS +=/" \
-		-e "s/LDFLAGS =/LDFLAGS +=/" \
-		config.mk || die "sed failed"
-}
-
-src_compile() {
-	emake CC=$(tc-getCC) || die "emake failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" PREFIX="/usr" install || die "emake install failed"
-
-	dodoc README
-}
